[gd_scene load_steps=8 format=3 uid="uid://dkyrv4q16lrvq"]

[ext_resource type="Script" uid="uid://co21kwytkdlx4" path="res://scripts/cypher_book.gd" id="1_xc2ce"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glv2v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r0du0"]
bg_color = Color(0.374139, 0.374139, 0.374139, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cm0pq"]
bg_color = Color(0.643137, 0.192157, 0.203922, 0.65098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fos0i"]
bg_color = Color(0.642381, 0.190858, 0.205298, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uu6xs"]
bg_color = Color(0.282353, 0.745098, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3dxm6"]
bg_color = Color(0.202558, 0.452076, 0.24796, 1)

[node name="CypherBook" type="Node2D"]
metadata/_edit_horizontal_guides_ = [3.0]

[node name="CypherBook" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 376.0
offset_bottom = 454.0
script = ExtResource("1_xc2ce")
metadata/_edit_group_ = true

[node name="Background" type="Panel" parent="CypherBook"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NextPage" type="Panel" parent="CypherBook/Background"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -68.0
offset_right = -16.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="CypherBook/Background/NextPage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_glv2v")
text = "NEXT"

[node name="PrevPage" type="Panel" parent="CypherBook/Background"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -358.0
offset_top = -68.0
offset_right = -299.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="CypherBook/Background/PrevPage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_glv2v")
text = "BACK"

[node name="CyphersP3" type="PanelContainer" parent="CypherBook/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 13.0
offset_right = -15.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r0du0")
metadata/_edit_group_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="CypherBook/Background/CyphersP3"]
layout_mode = 2
text = "HELLO, THIS IS PAGE 3"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="CyphersP2" type="PanelContainer" parent="CypherBook/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 13.0
offset_right = -15.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r0du0")
metadata/_edit_group_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="CypherBook/Background/CyphersP2"]
layout_mode = 2
text = "HELLO, THIS IS PAGE 2"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="CyphersP1" type="PanelContainer" parent="CypherBook/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 13.0
offset_right = -15.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r0du0")
metadata/_edit_group_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="CypherBook/Background/CyphersP1"]
layout_mode = 2
text = "HELLO, THIS IS PAGE 1"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="CyphersCover" type="PanelContainer" parent="CypherBook/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 13.0
offset_right = -15.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r0du0")
metadata/_edit_group_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="CypherBook/Background/CyphersCover"]
layout_mode = 2
text = "COVER PAGE"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseBook" type="Panel" parent="CypherBook/Background"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -31.0
offset_top = 4.0
offset_right = -8.0
offset_bottom = 27.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_cm0pq")

[node name="Button" type="Button" parent="CypherBook/Background/CloseBook"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_fos0i")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 161.0
offset_top = 397.0
offset_right = 215.0
offset_bottom = 437.0
theme_override_styles/panel = SubResource("StyleBoxFlat_uu6xs")
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="PanelContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_3dxm6")
text = "BOOK"

[node name="TextEditor" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 436.0
offset_right = 811.0
offset_bottom = 454.0
metadata/_edit_group_ = true

[node name="Panel" type="Panel" parent="TextEditor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextEdit" type="TextEdit" parent="TextEditor"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -173.5
offset_top = -212.0
offset_right = 174.5
offset_bottom = 211.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="CypherBook/Background/NextPage/Button" to="CypherBook" method="_on_next_page_pressed"]
[connection signal="pressed" from="CypherBook/Background/PrevPage/Button" to="CypherBook" method="_on_back_page_pressed"]
[connection signal="pressed" from="CypherBook/Background/CloseBook/Button" to="CypherBook" method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/Button" to="CypherBook" method="_on_open_book_pressed"]
