[gd_scene load_steps=9 format=3 uid="uid://dkyrv4q16lrvq"]

[ext_resource type="Script" uid="uid://co21kwytkdlx4" path="res://scripts/cypher_book.gd" id="1_xc2ce"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uu6xs"]
bg_color = Color(0.282353, 0.745098, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3dxm6"]
bg_color = Color(0.202558, 0.452076, 0.24796, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xc2ce"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glv2v"]
bg_color = Color(0.224797, 0.649121, 0.835063, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r0du0"]
bg_color = Color(0.374139, 0.374139, 0.374139, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e33h0"]
bg_color = Color(0.396889, 0.396889, 0.396889, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yka0n"]
bg_color = Color(0.760784, 0.105882, 0, 1)

[node name="CypherBook" type="Control"]
layout_mode = 3
anchors_preset = 0
metadata/_edit_horizontal_guides_ = [3.0]

[node name="BookOpen" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 242.0
offset_top = 248.0
offset_right = 296.0
offset_bottom = 324.0
theme_override_styles/panel = SubResource("StyleBoxFlat_uu6xs")
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="BookOpen"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_3dxm6")
text = "BOOK"

[node name="CypherBook" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 376.0
offset_bottom = 454.0
script = ExtResource("1_xc2ce")

[node name="Background" type="Panel" parent="CypherBook"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xc2ce")

[node name="NextPage" type="Panel" parent="CypherBook/Background"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -68.0
offset_right = -16.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="CypherBook/Background/NextPage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_glv2v")
text = "NEXT"

[node name="PrevPage" type="Panel" parent="CypherBook/Background"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -358.0
offset_top = -68.0
offset_right = -299.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="CypherBook/Background/PrevPage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_glv2v")
text = "BACK"

[node name="CyphersP3" type="PanelContainer" parent="CypherBook/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 13.0
offset_right = -15.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r0du0")
metadata/_edit_group_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="CypherBook/Background/CyphersP3"]
layout_mode = 2
text = "HELLO, THIS IS PAGE 3"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="CyphersP2" type="PanelContainer" parent="CypherBook/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 13.0
offset_right = -15.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r0du0")
metadata/_edit_group_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="CypherBook/Background/CyphersP2"]
layout_mode = 2
text = "HELLO, THIS IS PAGE 2"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="CyphersP1" type="Panel" parent="CypherBook/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 12.0
offset_right = -15.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r0du0")
metadata/_edit_group_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="CypherBook/Background/CyphersP1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.5
offset_top = -176.0
offset_right = 165.5
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_e33h0")
text = "The Caesar Cipher is a way to hide a message by sliding the alphabet over!
You pick a number (like 3), and shift every letter that many steps forward.

So:
F -> A
G -> B
H -> C
 …and so on!

It’s like using a secret alphabet that’s just moved over."
fit_content = true
scroll_active = false
tab_size = 3

[node name="CyphersCover" type="PanelContainer" parent="CypherBook/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 13.0
offset_right = -15.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r0du0")
metadata/_edit_group_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="CypherBook/Background/CyphersCover"]
layout_mode = 2
text = "COVER PAGE"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleBar" type="Panel" parent="CypherBook"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 16.0
offset_top = 12.0
offset_right = -15.0
offset_bottom = 26.0
grow_horizontal = 2
scale = Vector2(1, 1.04827)
theme_override_styles/panel = SubResource("StyleBoxFlat_yka0n")

[connection signal="pressed" from="BookOpen/Button" to="CypherBook" method="_on_open_book_pressed"]
[connection signal="pressed" from="CypherBook/Background/NextPage/Button" to="CypherBook" method="_on_next_page_pressed"]
[connection signal="pressed" from="CypherBook/Background/PrevPage/Button" to="CypherBook" method="_on_back_page_pressed"]
[connection signal="mouse_entered" from="CypherBook/TitleBar" to="CypherBook" method="_on_title_bar_mouse_entered"]
[connection signal="mouse_exited" from="CypherBook/TitleBar" to="CypherBook" method="_on_title_bar_mouse_exited"]
